@@ -190,15 +190,6 @@ name|handle
 operator|.
 name|put
 argument_list|(
-literal|"QTime"
-argument_list|,
-name|SKIPVAL
-argument_list|)
-expr_stmt|;
-name|handle
-operator|.
-name|put
-argument_list|(
 literal|"timestamp"
 argument_list|,
 name|SKIPVAL
@@ -344,15 +335,6 @@ name|handle
 operator|.
 name|clear
 argument_list|()
-expr_stmt|;
-name|handle
-operator|.
-name|put
-argument_list|(
-literal|"QTime"
-argument_list|,
-name|SKIPVAL
-argument_list|)
 expr_stmt|;
 name|handle
 operator|.
