@@ -149,15 +149,6 @@ operator|.
 name|clear
 argument_list|()
 expr_stmt|;
-name|handle
-operator|.
-name|put
-argument_list|(
-literal|"QTime"
-argument_list|,
-name|SKIPVAL
-argument_list|)
-expr_stmt|;
 name|query
 argument_list|(
 literal|"qt"
