@@ -838,15 +838,6 @@ name|handle
 operator|.
 name|put
 argument_list|(
-literal|"QTime"
-argument_list|,
-name|SKIPVAL
-argument_list|)
-expr_stmt|;
-name|handle
-operator|.
-name|put
-argument_list|(
 literal|"timestamp"
 argument_list|,
 name|SKIPVAL
